<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 lizhaotailang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    style="?attr/bottomSheetStyle"
    android:id="@+id/reading_bottom_sheet"
    android:background="@color/colorBaseBackground">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="@dimen/primary_margin"
        android:paddingRight="@dimen/primary_margin"
        android:drawablePadding="@dimen/primary_margin"
        android:text="@string/favorite"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_favorite_24dp"
        android:tint="@color/colorPrimaryText"
        android:id="@+id/text_view_favorite"
        android:textColor="@color/colorPrimaryText"/>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/text_view_copy_link"
        android:paddingLeft="@dimen/primary_margin"
        android:paddingRight="@dimen/primary_margin"
        android:text="@string/action_copy_link"
        android:drawableStart="@drawable/ic_insert_link_24dp"
        android:drawablePadding="@dimen/primary_margin"
        android:gravity="center_vertical"
        android:textColor="@color/colorPrimaryText"
        android:tint="@color/colorPrimaryText" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/text_view_open_with_browser"
        android:paddingLeft="@dimen/primary_margin"
        android:paddingRight="@dimen/primary_margin"
        android:text="@string/action_open_in_browser"
        android:gravity="center_vertical"
        android:textColor="@color/colorPrimaryText"
        android:drawableStart="@drawable/ic_open_in_browser_24dp"
        android:drawablePadding="@dimen/primary_margin"
        android:tint="@color/colorPrimaryText" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/text_view_share"
        android:paddingLeft="@dimen/primary_margin"
        android:paddingRight="@dimen/primary_margin"
        android:text="@string/action_share"
        android:gravity="center_vertical"
        android:textColor="@color/colorPrimaryText"
        android:drawableStart="@drawable/ic_share_24dp"
        android:drawablePadding="@dimen/primary_margin"/>

</LinearLayout>