<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" 
    android:background="@drawable/background" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    <LinearLayout 
        android:gravity="center_horizontal" 
        android:orientation="vertical" 
        android:paddingLeft="@dimen/activity_horizontal_margin" 
        android:paddingTop="@dimen/activity_vertical_margin" 
        android:paddingRight="@dimen/activity_horizontal_margin" 
        android:paddingBottom="@dimen/activity_vertical_margin" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        <ProgressBar 
            android:id="@+id/login_progress" 
            android:visibility="gone" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="8.0dip" 
            style="?android:attr/progressBarStyleLarge" />
        <RelativeLayout 
            android:id="@+id/login_form" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">
            <LinearLayout 
                android:orientation="vertical" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content">
                <android.support.v7.widget.Toolbar 
                    android:id="@+id/toolbar" 
                    android:paddingTop="10.0dip" 
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content">
                    <RelativeLayout 
                        android:layout_width="fill_parent" 
                        android:layout_height="wrap_content">
                        <Button 
                            android:textSize="24.0sp" 
                            android:textColor="@color/white" 
                            android:gravity="center" 
                            android:background="?android:selectableItemBackground" 
                            android:layout_width="wrap_content" 
                            android:layout_height="wrap_content" 
                            android:text="@string/register" 
                            android:layout_alignParentRight="true" />
                    </RelativeLayout>
                </android.support.v7.widget.Toolbar>
                <de.hdodenhof.circleimageview.CircleImageView 
                    android:layout_gravity="center_horizontal" 
                    android:id="@+id/login_image" 
                    android:layout_width="100.0dip" 
                    android:layout_height="100.0dip" 
                    android:src="@drawable/background" />
                <android.support.design.widget.TextInputLayout 
                    android:textColorHint="#ffffffff" 
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="20.0dip">
                    <AutoCompleteTextView 
                        android:textColor="@color/white" 
                        android:textColorHighlight="@color/white" 
                        android:textColorHint="@color/white" 
                        android:id="@+id/login_username" 
                        android:layout_width="fill_parent" 
                        android:layout_height="wrap_content" 
                        android:hint="@string/prompt_username" android:maxLines="1"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout 
                    android:textColorHint="#ffffffff" 
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content">
                    <EditText 
                        android:textColor="@color/white" 
                        android:id="@+id/login_password" 
                        android:layout_width="fill_parent" 
                        android:layout_height="wrap_content" 
                        android:hint="@string/prompt_password" android:maxLines="1" 
                        android:inputType="textPassword" 
                        android:imeOptions="normal|actionUnspecified" 
                        android:imeActionLabel="@string/action_sign_in_short" 
                        android:imeActionId="@+id/login" />
                </android.support.design.widget.TextInputLayout>
                <Button android:textSize="20.0dip"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:id="@+id/email_sign_in_button"
                    android:background="@drawable/ripple_bg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16.0dip"
                    android:text="@string/action_sign_in"
                    style="?android:textAppearanceSmall" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <View android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white"
                        android:layout_width="0.0dip"
                        android:layout_height="1.0dip"
                        android:layout_weight="4.0" />
                    <TextView
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:text="其他登录"
                        android:layout_weight="2.0" />
                    <View
                        android:layout_gravity="center_vertical"
                        android:background="@color/white"
                        android:layout_width="0.0dip"
                        android:layout_height="1.0dip"
                        android:layout_weight="4.0" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30.0dip"
                    android:layout_marginEnd="30.0dip">
                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/tongji_login"
                        android:paddingTop="@dimen/activity_horizontal_margin"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="50.0dip"
                            android:layout_height="50.0dip"  />
                        <TextView
                            android:textColor="@color/white"
                            android:layout_gravity="center_horizontal"
                            android:paddingTop="5.0dip"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:text="微信登录" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:paddingTop="@dimen/activity_horizontal_margin"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="50.0dip"
                            android:layout_height="50.0dip"  />
                        <TextView
                            android:textColor="@color/white"
                            android:layout_gravity="center_horizontal"
                            android:paddingTop="5.0dip"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:text="同济身份登录" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:paddingTop="@dimen/activity_horizontal_margin"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="50.0dip"
                            android:layout_height="50.0dip" />
                        <TextView
                            android:textColor="@color/white"
                            android:layout_gravity="center_horizontal"
                            android:paddingTop="5.0dip"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:text="QQ登录" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>