<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.add.AddEventActivity">
    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <ImageButton
            android:id="@+id/add_event_back_btn"
            android:background="@drawable/ic_arrow_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_vertical" />
        <TextView
            android:textSize="@dimen/title_size"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="添加活动"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/add_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_team_title"
                android:padding="8dp"
                android:textSize="20sp"
                android:background="@color/my_gray"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/add_event_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_team_content"
                android:enabled="true"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:background="@color/my_gray"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
            <EditText
                android:id="@+id/add_event_organiser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="主办方"
                android:enabled="true"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:background="@color/my_gray"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/add_event_enrool_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="报名开始时间"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"/>
                <TextView
                    android:id="@+id/add_event_enrool_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="报名结束时间"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/add_event_match_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="活动开始时间"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"/>
                <TextView
                    android:id="@+id/add_event_match_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="活动结束时间"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/add_event_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="活动类型"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_filter_list_black_24dp"/>
                <TextView
                    android:id="@+id/add_event_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="活动级别"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_bubble_chart_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp">
                <TextView
                    android:id="@+id/add_event_add_iamge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="添加海报"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_add_black_24dp"/>
                <ImageView
                    android:id="@+id/add_event_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="400dp"
                    android:adjustViewBounds="true" />
            </LinearLayout>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/add_event_send_btn"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="50dp"
                android:background="@drawable/button_shape_default_rounded"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:spinning_bar_color="@color/black"
                app:spinning_bar_width="4dp"
                app:initialCornerAngle="50dp"
                app:finalCornerAngle="50dp"
                android:text="@string/publish"
                android:textSize="18sp"
                android:transitionName="transition"
                android:textColor="@android:color/black"/>

            <!--<br.com.simplepass.loading_button_lib.customViews.CircularProgressImageButton-->
            <!--android:scaleType="fitCenter"-->
            <!--android:id="@+id/add_team_send_btn"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginLeft="18dp"-->
            <!--android:layout_marginRight="18dp"-->
            <!--android:background="@drawable/button_shape_default_rounded"-->
            <!--app:spinning_bar_padding="0dp"-->
            <!--app:spinning_bar_color="@android:color/black"-->
            <!--app:spinning_bar_width="3dp"-->
            <!--app:initialCornerAngle="0dp"-->
            <!--app:finalCornerAngle="50dp"-->
            <!--android:text="Send"-->
            <!--android:layout_marginBottom="20dp"/>-->

        </LinearLayout>
    </ScrollView>
</LinearLayout>
